{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 195,
  "lineage": "7b14d3c5-9f3c-3da6-3a4f-ed409b716cee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:route-table/rtb-0db5cb8662964c55d",
            "id": "rtb-0db5cb8662964c55d",
            "owner_id": "797856765181",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035bee4eb39c18b54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "df",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:security-group/sg-0f06a7f3fb7259fb1",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f06a7f3fb7259fb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "df",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035bee4eb39c18b54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:security-group/sg-03a9bc4e3dfd5a422",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a9bc4e3dfd5a422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/20"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "security-group-1",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035bee4eb39c18b54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:security-group/sg-0ed224e25b6840baf",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed224e25b6840baf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 30,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/20"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "security-group-2",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035bee4eb39c18b54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        },
        {
          "index_key": "security-group-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:security-group/sg-0f200efb7f0b677f6",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f200efb7f0b677f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/20"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "security-group-3",
            "name_prefix": "",
            "owner_id": "797856765181",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035bee4eb39c18b54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797856765181:vpc/vpc-035bee4eb39c18b54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-061c4beb542f113e6",
            "default_route_table_id": "rtb-011bf46dae5943b88",
            "default_security_group_id": "sg-0d5a5b69c9dc3cc17",
            "dhcp_options_id": "dopt-5213063a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035bee4eb39c18b54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011bf46dae5943b88",
            "owner_id": "797856765181",
            "tags": {
              "Name": "vpc_east-2"
            },
            "tags_all": {
              "Name": "vpc_east-2"
            }
          }
        }
      ]
    }
  ]
}